# low_latency_ai_agent_platform

./: CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  quick_start.bat  quick_test.py  run_demo.bat  run_demo.sh  simple_start.sh  test_request.json
demo/: PERFORMANCE_RESULTS.md  fair_performance_comparison.py  final_performance_comparison.py  heavy_workload_benchmark.py  optimized_performance_benchmark.py  performance_benchmark.py  python_vs_rust_benchmark.py  run_demo.py  run_demo.sh  rust_backend_demo.py  scenarios.md
python-agent/: agent.py  requirements.txt  run_demo.py
rust-core/: Cargo.toml  test.txt  test_serialize.rs
rust-core/src/: engine.rs  main.rs  types.rs
rust-core/src/cache/: mod.rs
rust-core/src/metrics/: mod.rs
rust-core/src/tools/: compute.rs  file.rs  heavy_compute.rs  heavy_file.rs  http.rs  mod.rs  registry.rs
src/: main.rs
