[package]
name = "low-latency-ai-agent-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
futures = "0.3"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
lru = "0.12"

[[bin]]
name = "rust-core"
path = "src/main.rs"
